<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.microservice.test</groupId>
        <artifactId>hexagonal-chain-prices</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>hexagonal-chain-prices-application</artifactId>
    <name>hexagonal-chain-prices-application</name>
    <description>spring-boot hexagonal microservice application layer</description>

    <properties>
        <version>0.0.1-SNAPSHOT</version>
        <easy-random-core.version>5.0.0</easy-random-core.version>
        <spring-context.version>5.3.15</spring-context.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
    <dependency>
        <groupId>com.microservice.test</groupId>
        <artifactId>hexagonal-chain-prices-domain</artifactId>
        <version>${version}</version>
    </dependency>
    <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <optional>true</optional>
    </dependency>
    <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
    </dependency>
    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>${spring-context.version}</version>
        <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>org.jeasy</groupId>
        <artifactId>easy-random-core</artifactId>
        <version>${easy-random-core.version}</version>
        <scope>test</scope>
    </dependency>
    </dependencies>

</project>